impl: unit test

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@openzeppelin/contracts": "^4.7.3",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "eslint": "8.22.0",
-    "moment": "^2.29.4"
+    "gaussian": "^1.2.0",
+    "moment": "^2.29.4",
+    "poisson-process": "^1.0.1"
   }
 }
