--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "solidity-coverage": "^0.8.2"
   },
   "dependencies": {
+    "@extra-math/erf": "^1.1.18",
     "@openzeppelin/contracts": "^4.7.3",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "dotenv": "^16.0.3",
     "eslint": "8.22.0",
+    "extra-math": "^1.3.51",
     "fs-extra": "^10.1.0",
     "gaussian": "^1.2.0",
     "inquirer": "^9.1.4",
+    "math-erf": "^1.0.0",
+    "mathjs": "^11.4.0",
     "moment": "^2.29.4",
     "poisson-process": "^1.0.1"
   }
