--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^9.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "hardhat": "^2.11.2",
@@ -19,7 +20,8 @@
     "extra-math": "^1.3.51",
     "fs-extra": "^10.1.0",
     "gaussian": "^1.2.0",
-    "inquirer": "^9.1.4",
+    "inquirer": "^8.2.5",
+    "inquirer-ts-checkbox-plus-prompt": "^1.0.1",
     "math-erf": "^1.0.0",
     "mathjs": "^11.4.0",
     "moment": "^2.29.4",
