--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@openzeppelin/truffle-upgrades": "^1.17.0",
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^9.0.3",
     "eslint-config-prettier": "^8.5.0",
@@ -14,6 +15,8 @@
     "@extra-math/erf": "^1.1.18",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
     "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts-upgradeable": "^4.8.1",
+    "@openzeppelin/hardhat-upgrades": "^1.22.1",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "dotenv": "^16.0.3",
     "eslint": "8.22.0",
