--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@acala-network/eth-providers": "^2.6.1",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/truffle-upgrades": "^1.17.0",
@@ -9,11 +10,20 @@
     "eslint-plugin-prettier": "^4.2.1",
     "hardhat": "^2.11.2",
     "prettier": "^2.7.1",
-    "solidity-coverage": "^0.8.2"
+    "solidity-coverage": "^0.8.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  },
+  "scripts": {
+    "deploy": "hardhat run scripts/deploy.ts",
+    "deploy-mandala": "hardhat run scripts/deploy.ts --network mandala",
+    "deploy-mumbai": "hardhat run scripts/deploy.ts --network mumbai",
+    "deploy-mandala:pubDev": "hardhat run scripts/deploy.js --network mandalaPubDev"
   },
   "dependencies": {
     "@extra-math/erf": "^1.1.18",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.1",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
