--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "hardhat": "^2.11.2",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
+    "prettier-plugin-solidity": "^1.1.2",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "operation-mumbai":"hardhat run scripts/operations/index.ts --network mumbai",
+    "prettier": "prettier --write 'contracts/**/*.sol'",
     "deploy": "hardhat run scripts/deploy.ts",
     "deploy-mandala": "hardhat run scripts/deploy.ts --network mandala",
     "deploy-mumbai": "hardhat run scripts/deploy.ts --network mumbai",
