[impl]: acala mandala

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@openzeppelin/truffle-upgrades": "^1.17.0",
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^9.0.3",
+    "chai": "^4.3.7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "hardhat": "^2.11.2",
@@ -19,10 +20,11 @@
     "prettier": "prettier --write 'contracts/**/*.sol'",
     "deploy": "hardhat run scripts/deploy.ts",
     "deploy-mumbai": "hardhat run scripts/deploy.ts --network mumbai",
-    "operation-mumbai":"hardhat run scripts/operations/index.ts --network mumbai",
+    "operation-mumbai": "hardhat run scripts/operations/index.ts --network mumbai",
     "deploy-mandala-localhost": "hardhat run scripts/deploy.ts --network mandala_localhost",
     "operation-mandala-localhost": "hardhat run scripts/operations/index.ts --network mandala_localhost",
     "deploy-mandala": "hardhat run scripts/deploy.ts --network mandala",
+    "destruct-mandala": "hardhat run scripts/destruct.ts --network mandala",
     "operation-mandala": "hardhat run scripts/operations/index.ts --network mandala",
     "deploy-mandala:pubDev": "hardhat run scripts/deploy.js --network mandalaPubDev",
     "operation-mandala:pubDev": "hardhat run scripts/operations/index.ts --network mandalaPubDev"
