--- a/deployments/.env.mumbai.json
+++ b/deployments/.env.mumbai.json
@@ -13,6 +13,7 @@
       "epochManage": "0xd14a254B855d5D0534a86d5303DeEB35c588a5Ec"
     }
   ],
+  "network": "mumbai",
   "globalsViewer": "0x66f1C771AF19C9d486F80a767FA73FbA8C0D947c",
   "metaDefenderMarketsRegistry": "0x521AEab3F6F65d8D25A24d57acA722bF13162922",
   "testERC20": "0x99a045aC96273C7991bee510d11277891a106126",
