--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "scripts": {
     "prettier": "prettier --write 'contracts/**/*.sol'",
     "deploy": "hardhat run scripts/deploy.ts",
-    "deploy-mumbai": "hardhat run scripts/deploy.ts --network mumbai",
-    "operation-mumbai": "hardhat run scripts/operations/index.ts --network mumbai",
-    "deploy-arbitrum-goerli": "hardhat run scripts/deploy.ts --network arbitrum_goerli",
-    "operation-arbitrum-goerli": "hardhat run scripts/operations/index.ts --network arbitrum_goerli",
+    "deploy:mumbai": "hardhat run scripts/deploy.ts --network mumbai",
+    "deploy:arbitrum-goerli" : "hardhat run scripts/deploy.ts --network arbitrum-goerli",
+    "operation:mumbai": "hardhat run scripts/operations/index.ts --network mumbai",
+    "operation:arbitrum-goerli": "hardhat run scripts/operations/index.ts --network arbitrum-goerli",
     "deploy-mandala-localhost": "hardhat run scripts/deploy.ts --network mandala_localhost",
     "operation-mandala-localhost": "hardhat run scripts/operations/index.ts --network mandala_localhost",
     "deploy-mandala": "hardhat run scripts/deploy.ts --network mandala",
