[bug fix] premium * coverage

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prettier": "prettier --write 'contracts/**/*.sol'",
     "deploy": "hardhat run scripts/deploy.ts",
     "deploy:mumbai": "hardhat run scripts/deploy.ts --network mumbai",
-    "deploy:arbitrum-goerli" : "hardhat run scripts/deploy.ts --network arbitrum-goerli",
+    "deploy:arbitrum-goerli": "hardhat run scripts/deploy.ts --network arbitrum-goerli",
     "operation:mumbai": "hardhat run scripts/operations/index.ts --network mumbai",
     "operation:arbitrum-goerli": "hardhat run scripts/operations/index.ts --network arbitrum-goerli",
     "deploy-mandala-localhost": "hardhat run scripts/deploy.ts --network mandala_localhost",
@@ -35,6 +35,7 @@
     "@extra-math/erf": "^1.1.18",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.8.1",
     "@openzeppelin/hardhat-upgrades": "^1.22.1",
