--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-  "devDependencies": {
-    "@acala-network/eth-providers": "^2.6.1",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@openzeppelin/truffle-upgrades": "^1.17.0",
-    "@types/fs-extra": "^9.0.13",
-    "@types/inquirer": "^9.0.3",
-    "chai": "^4.3.7",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "hardhat": "^2.11.2",
-    "prettier": "^2.8.4",
-    "prettier-plugin-solidity": "^1.1.2",
-    "solidity-coverage": "^0.8.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  },
   "scripts": {
     "prettier": "prettier --write 'contracts/**/*.sol'",
     "deploy": "hardhat run scripts/deploy.ts",
     "deploy:mumbai": "hardhat run scripts/deploy.ts --network mumbai",
     "deploy:arbitrum-goerli": "hardhat run scripts/deploy.ts --network arbitrum-goerli",
-    "operation:mumbai": "hardhat run scripts/operations/index.ts --network mumbai",
-    "operation:arbitrum-goerli": "hardhat run scripts/operations/index.ts --network arbitrum-goerli",
+    "operation:mumbai": "hardhat run scripts/operations/interface.ts --network mumbai",
+    "operation:arbitrum-goerli": "hardhat run scripts/operations/interface.ts --network arbitrum-goerli",
     "deploy-mandala-localhost": "hardhat run scripts/deploy.ts --network mandala_localhost",
-    "operation-mandala-localhost": "hardhat run scripts/operations/index.ts --network mandala_localhost",
+    "operation-mandala-localhost": "hardhat run scripts/operations/interface.ts --network mandala_localhost",
     "deploy-mandala": "hardhat run scripts/deploy.ts --network mandala",
     "destruct-mandala": "hardhat run scripts/destruct.ts --network mandala",
-    "operation-mandala": "hardhat run scripts/operations/index.ts --network mandala",
+    "operation-mandala": "hardhat run scripts/operations/interface.ts --network mandala",
     "deploy-mandala:pubDev": "hardhat run scripts/deploy.js --network mandalaPubDev",
-    "operation-mandala:pubDev": "hardhat run scripts/operations/index.ts --network mandalaPubDev"
+    "operation-mandala:pubDev": "hardhat run scripts/operations/interface.ts --network mandalaPubDev"
   },
-  "dependencies": {
-    "@extra-math/erf": "^1.1.18",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
-    "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "@openzeppelin/contracts": "^4.7.3",
-    "@openzeppelin/contracts-upgradeable": "^4.8.1",
-    "@openzeppelin/hardhat-upgrades": "^1.22.1",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "dotenv": "^16.0.3",
-    "eslint": "8.22.0",
-    "extra-math": "^1.3.51",
-    "fs-extra": "^10.1.0",
-    "gaussian": "^1.2.0",
+  "devDependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "~5.7.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4",
+    "@types/eslint": "^8",
+    "@types/inquirer": "^9.0.3",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "chai": "^4.3.7",
+    "eslint": "^8.41.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "ethers": "~5.7.0",
+    "hardhat": "^2.13.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "inquirer": "^8.2.5",
     "inquirer-ts-checkbox-plus-prompt": "^1.0.1",
-    "math-erf": "^1.0.0",
-    "mathjs": "^11.4.0",
-    "moment": "^2.29.4",
-    "poisson-process": "^1.0.1"
+    "solidity-coverage": "^0.8.1",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.2.0",
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "@acala-network/api": "^6.0.0",
+    "@acala-network/contracts": "^4.4.1",
+    "@openzeppelin/contracts": "^4.9.3",
+    "@types/fs-extra": "^11.0.1",
+    "fs-extra": "^11.1.1",
+    "inquirer": "^8.2.5",
+    "inquirer-ts-checkbox-plus-prompt": "^1.0.1"
   }
 }
