--- a/metadefender-subql/docker-compose.yml
+++ b/metadefender-subql/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       retries: 5
 
   subquery-node:
-    image: onfinality/subql-node:latest
+    image: onfinality/subql-node-ethereum:latest
     depends_on:
       "postgres":
         condition: service_healthy
@@ -31,13 +31,10 @@ services:
       DB_PORT: 5432
     volumes:
       - ./:/app
-    command:
+    command: 
       - ${SUB_COMMAND} # set SUB_COMMAND env variable to "test" to run tests
       - -f=/app
       - --db-schema=app
-      - --workers=4
-      - --batch-size=30
-      - --unfinalized-blocks=true
     healthcheck:
       test: ["CMD", "curl", "-f", "http://subquery-node:3000/ready"]
       interval: 3s
