--- a/metadefender-subql/tsconfig.json
+++ b/metadefender-subql/tsconfig.json
@@ -9,8 +9,7 @@
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
-    "target": "es2017",
-    "strict": true
+    "target": "es2017"
   },
   "include": ["src/**/*", "node_modules/@subql/types/dist/global.d.ts"]
 }
