--- a/metadefender-subql/project.yaml
+++ b/metadefender-subql/project.yaml
@@ -32,11 +32,11 @@ network:
 
 dataSources:
   - kind: ethereum/Runtime
-    startBlock: 613258
+    startBlock: 620000
     options:
       # Must be a key of assets
       abi: MetaDefenderMarketRegistry
-      address: "0x46bE2A41bDA3407842c3d426478c67AE4057B517" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+      address: "0x3AF57aaB0aB8660a5fC142f8DFe5Df56bd8A03Ef" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     assets:
       MetaDefenderMarketRegistry:
         file: artifacts/contracts/periphery/MetaDefenderMarketsRegistry.sol/MetaDefenderMarketsRegistry.json
@@ -49,11 +49,11 @@ dataSources:
             topics:
               - MarketAdded(address metaDefender,address liquidityCertificate,address policy,address epochManage,string marketName,string marketDescription,string marketPaymentToken,string marketProtectionType,string network)
   - kind: ethereum/Runtime
-    startBlock: 613258
+    startBlock: 620000
     options:
       # Must be a key of assets
-      abi: LiquidityCertificate_glimmer
-      address: "0xA6D458D170E4B51Bc3BB8dDefDdA5799917Ec1be" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+      abi: LiquidityCertificate
+      address: "0x6cBea0dd6fA47e1285fFBA062e3566DCfD746295" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     assets:
       LiquidityCertificate:
         file: artifacts/contracts/LiquidityCertificate.sol/LiquidityCertificate.json
@@ -71,11 +71,11 @@ dataSources:
             topics:
               - NewLPMinted(address owner,uint256 certificateId,uint256 enteredEpochIndex,uint256 liquidity,address metadefender)
   - kind: ethereum/Runtime
-    startBlock: 613258
+    startBlock: 620000
     options:
       # Must be a key of assets
-      abi: LiquidityCertificate_flame
-      address: "0xA6D458D170E4B51Bc3BB8dDefDdA5799917Ec1be" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+      abi: LiquidityCertificate
+      address: "0xb38dB66D5aC4A3198AF6592747F414c380247ADb" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     assets:
       LiquidityCertificate:
         file: artifacts/contracts/LiquidityCertificate.sol/LiquidityCertificate.json
@@ -93,11 +93,11 @@ dataSources:
             topics:
               - NewLPMinted(address owner,uint256 certificateId,uint256 enteredEpochIndex,uint256 liquidity,address metadefender)
   - kind: ethereum/Runtime
-    startBlock: 613258
+    startBlock: 620000
     options:
       # Must be a key of assets
-      abi: LiquidityCertificate_blaze
-      address: "0xA6D458D170E4B51Bc3BB8dDefDdA5799917Ec1be" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+      abi: LiquidityCertificate
+      address: "0xC659Abac43B6E67F91Ae5af9E8610e9DBf6fD9E3" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     assets:
       LiquidityCertificate:
         file: artifacts/contracts/LiquidityCertificate.sol/LiquidityCertificate.json
@@ -115,11 +115,11 @@ dataSources:
             topics:
               - NewLPMinted(address owner,uint256 certificateId,uint256 enteredEpochIndex,uint256 liquidity,address metadefender)
   - kind: ethereum/Runtime
-    startBlock: 613258
+    startBlock: 620000
     options:
       # Must be a key of assets
-      abi: Policy_glimmer
-      address: "0x598B2456073B3d9E0AdA902dAc30f4662Eb2d625" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+      abi: Policy
+      address: "0xB4e77CBB41a9c168512C8E0B417a50a867F35020" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     assets:
       Policy:
         file: artifacts/contracts/Policy.sol/Policy.json
@@ -137,11 +137,11 @@ dataSources:
             topics:
               - NewPolicyMinted(address beneficiary,uint256 policyId,uint256 timestamp,uint256 coverage,uint256 fee,uint256 duration,uint256 standardRisk,uint256 enteredEpochIndex,uint256 SPS,address protocol,address epochManage)
   - kind: ethereum/Runtime
-    startBlock: 613258
+    startBlock: 620000
     options:
       # Must be a key of assets
-      abi: Policy_flame
-      address: "0x598B2456073B3d9E0AdA902dAc30f4662Eb2d625" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+      abi: Policy
+      address: "0x77E704Ce73209Ac0093BC9485679AeB02d5DbF03" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     assets:
       Policy:
         file: artifacts/contracts/Policy.sol/Policy.json
@@ -159,11 +159,11 @@ dataSources:
             topics:
               - NewPolicyMinted(address beneficiary,uint256 policyId,uint256 timestamp,uint256 coverage,uint256 fee,uint256 duration,uint256 standardRisk,uint256 enteredEpochIndex,uint256 SPS,address protocol,address epochManage)
   - kind: ethereum/Runtime
-    startBlock: 613258
+    startBlock: 620000
     options:
       # Must be a key of assets
-      abi: Policy_blaze
-      address: "0x598B2456073B3d9E0AdA902dAc30f4662Eb2d625" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+      abi: Policy
+      address: "0x8D0b6629EA2C1d648C13aACec35dF97fd43Bf9aE" # this is the contract address for wrapped ether https://etherscan.io/address/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
     assets:
       Policy:
         file: artifacts/contracts/Policy.sol/Policy.json
