--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/fs-extra": "^11.0.1",
     "fs-extra": "^11.1.1",
     "inquirer": "^8.2.5",
-    "inquirer-ts-checkbox-plus-prompt": "^1.0.1"
+    "inquirer-ts-checkbox-plus-prompt": "^1.0.1",
+    "moment": "^2.29.4"
   }
 }
