--- a/metadefender-subql/project.yaml
+++ b/metadefender-subql/project.yaml
@@ -47,7 +47,7 @@ dataSources:
           kind: ethereum/LogHandler
           filter:
             topics:
-              - MarketAdded(address metaDefender,address liquidityCertificate,address policy,address epochManage,string marketName,string marketDescription,string marketPaymentToken,string marketProtectionType,string network)
+              - MarketAdded(address metaDefender,address liquidityCertificate,address policy,address epochManage,string marketName,string marketDescription,string marketPaymentToken,string marketProtectionType,string network,uint256 timestamp)
   - kind: ethereum/Runtime
     startBlock: 620000
     options:
